src/objects/loan__Savings_Withdrawal_Transaction__c.object
<CustomObject>
    <description>Savings Withdrawal Transaction</description>
    <fields>
        <fullName>loan__Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Receipt_ID__c</fullName>
        <displayFormat>RTRID-{0000000000}</displayFormat>
        <label>Receipt ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Account__c</fullName>
        <label>Savings Account</label>
        <referenceTo>loan__Savings_Account__c</referenceTo>
        <relationshipLabel>Savings Withdrawal Transactions</relationshipLabel>
        <relationshipName>Savings_Withdrawal_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Withdrawal_Amount__c</fullName>
        <label>Withdrawal Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Withdrawal_Date__c</fullName>
        <label>Withdrawal Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Savings Withdrawal Transaction</label>
    <nameField>
        <displayFormat>SWT-{000000000}</displayFormat>
        <label>Savings Withdrawal TransactionID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Savings Withdrawal Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Max_Withdrwal_Amount_check</fullName>
        <active>true</active>
        <description>Max_Withdrwal_Amount_check</description>
        <errorConditionFormula>OR(
             ( loan__Withdrawal_Amount__c   &gt;  
             loan__Savings_Account__r.loan__Savings_Product_Name__r.loan__Max_Amount_Per_Withdrawal__c),
             ( loan__Withdrawal_Amount__c   &gt;    loan__Savings_Account__r.loan__Balance__c  )
)</errorConditionFormula>
        <errorDisplayField>loan__Withdrawal_Amount__c</errorDisplayField>
        <errorMessage>Amount should be within the withdrawal limits and less than account balance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Savings_Account_Status_check</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( loan__Savings_Account__r.loan__Status__c , &apos;Inactive&apos;)</errorConditionFormula>
        <errorMessage>The account has not been activated yet.</errorMessage>
    </validationRules>
</CustomObject>